# madmen-front-react-js

./: .dockerignore  .gitignore  Dockerfile  README.md  b.length-a.length)  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
deploy/: bootstrap-front.sh  docker-compose.yml  nginx.conf
design-reference/: DESIGN.md  code.html
docs/: SETUP-APP-ADMIN-MATERIEL.md  openapi (2).yaml  openapi.yaml
docs/superpowers/plans/: 2026-06-23-app-admin-tauri-bundle.md  2026-06-23-relais-cloud.md
docs/superpowers/specs/: 2026-06-23-dashboard-tauri-bundle-design.md  2026-06-23-relais-cloud-design.md  2026-06-25-profile-navigation-design.md
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  fingerprint.rs  main.rs
src/components/badge/: BadgeEmploye.jsx  BadgeModal.jsx
src/components/ui/: AreaChart.jsx  (+28 more)
src/context/: AuthContext.jsx
src/data/: datasets.js  mockData.js  profil.js
src/hooks/: useCountUp.js
src/lib/: api.js  mappers.js  tauri.js
src/pages/: Activite.jsx  Administration.jsx  Aide.jsx  Alertes.jsx  Appareils.jsx  Communication.jsx  Dashboard.jsx  Demandes.jsx  Employes.jsx  Enrolement.jsx  Finance.jsx  Identifiants.jsx  JoursFeries.jsx  Login.jsx  Messagerie.jsx  MonProfil.jsx  Objectifs.jsx  Organisation.jsx  Paiement.jsx  Parametres.jsx  Placeholder.jsx  PointageHoraires.jsx  Pointages.jsx  Postes.jsx  Presence.jsx  Productivite.jsx  ProfilDetails.jsx  ProfilEmploye.jsx  Rapports.jsx  Utilisateurs.jsx
(+16 files in other folders)
